# voice-ocr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
src/freescribe/: __init__.py  cli.py  ocr.py  stt.py  utils.py  web.py
tests/: test_freescribe.py
